# Running_RESTful_API

./: .env  .gitignore  README.md  app.py  pyproject.toml  query_endpoints.py
api/: base_transform.py  forward_transform.py  rate_of_change.py  reverse_transform.py
tests/: api_tests_postman_collection_existing_model.json  api_tests_postman_collection_new_model.json  base_unit_test.py  existing_model_unit_test.py  new_model_unit_test.py
training_model/: __init__.py  base_model.py  existing_model.py  new_model.py
